tests/snapshots/edit__first_nested_node_change_flat_input_url.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change).unwrap().unwrap()
info:
  flake_nix: ""
  changes:
    - Change:
        id: nixpkgs
        uri: "github:NixOS/nixpkgs/nixos-24.05"
        ref_or_rev: ~
---
{
  description = "test file";

  inputs = {
    naersk = {
      url = "github:nix-community/naersk/master";
      inputs.nixpkgs.follows = "nixpkgs";
    };
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-24.05";
    utils.url = "github:numtide/flake-utils";
    flake-compat = {
      url = "github:edolstra/flake-compat";
      flake = false;
    };
  };

  outputs =
    {
      self,
      nixpkgs,
      utils,
      naersk,
      flake-compat,
    }:
    { };
}
