tests/snapshots/edit__first_nested_node_change_url.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change).unwrap().unwrap()
info:
  flake_nix: ""
  changes:
    - Change:
        id: naersk
        uri: "github:nix-community/naersk/v1.0.0"
        ref_or_rev: ~
---
{
  description = "test file";

  inputs = {
    naersk = {
      url = "github:nix-community/naersk/v1.0.0";
      inputs.nixpkgs.follows = "nixpkgs";
    };
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
    utils.url = "github:numtide/flake-utils";
    flake-compat = {
      url = "github:edolstra/flake-compat";
      flake = false;
    };
  };

  outputs =
    {
      self,
      nixpkgs,
      utils,
      naersk,
      flake-compat,
    }:
    { };
}
