tests/snapshots/edit__first_nested_node_inputs.snap
---
source: tests/edit.rs
expression: walker.inputs
info:
  flake_nix: ""
  changes: []
---
flake-compat:
  id: flake-compat
  flake: true
  url: "\"github:edolstra/flake-compat\""
  follows: []
naersk:
  id: naersk
  flake: true
  url: "\"github:nix-community/naersk/master\""
  follows:
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""
nixpkgs:
  id: nixpkgs
  flake: true
  url: "\"github:NixOS/nixpkgs/nixpkgs-unstable\""
  follows: []
utils:
  id: utils
  flake: true
  url: "\"github:numtide/flake-utils\""
  follows: []
