tests/snapshots/edit__flake_edit_list@completely_flat_toplevel_alt.snap
---
source: tests/edit.rs
expression: flake_edit.list()
info:
  flake_nix: ""
  changes: []
---
crane:
  id: crane
  flake: true
  url: "\"github:ipetkov/crane\""
  follows:
    - Indirect:
        - flake-utils
        - "\"flake-utils\""
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""
    - Indirect:
        - rust-overlay
        - "\"rust-overlay\""
  range:
    start: 466
    end: 488
flake-utelinos:
  id: flake-utelinos
  flake: true
  url: "\"github:numtide/flake-utils\""
  follows: []
  range:
    start: 150
    end: 178
nixpkgs:
  id: nixpkgs
  flake: true
  url: "\"github:nixos/nixpkgs/nixos-unstable\""
  follows: []
  range:
    start: 86
    end: 123
rust-overlay:
  id: rust-overlay
  flake: true
  url: "\"github:oxalica/rust-overlay\""
  follows:
    - Indirect:
        - flake-utils
        - "\"flake-utils\""
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""
  range:
    start: 256
    end: 285
